# pygaussia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/aws-lambda/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/metric-creator/: SKILL.md
.claude/skills/metric-creator/templates/: fixtures.py.template  llm_metric.py.template  metric.py.template  schema.py.template  test.py.template
.github/workflows/: release.yml  sync-docs.yml
.specify/memory/: constitution.md
docs/: docs-sync.json  docs.json  index.mdx  installation.mdx  quickstart.mdx
docs/advanced/: explainability.mdx  generators.mdx  prompt-optimizer.mdx
docs/concepts/: architecture.mdx  datasets.mdx  llm-judge.mdx  retriever.mdx  statistical-modes.mdx
docs/metrics/: agentic.mdx  best-of.mdx  bias.mdx  context.mdx  conversational.mdx  humanity.mdx  overview.mdx  regulatory.mdx  role-adherence.mdx  toxicity.mdx  vision.mdx
examples/agentic/aws-lambda/: Dockerfile  README.md  handler.py  run.py
examples/agentic/jupyter/: README.md  agentic.ipynb  dataset_agentic.json
examples/bestof/aws-lambda/: Dockerfile  README.md  handler.py  run.py
examples/bestof/aws-lambda/scripts/: update.sh
examples/bestof/jupyter/: bestof.ipynb  dataset_bestof.json
examples/bias/jupyter/: bias.ipynb
examples/context/jupyter/: context.ipynb
examples/conversational/jupyter/: conversational.ipynb
examples/data/: dataset.json
examples/explainability/jupyter/: attributions.ipynb
examples/generators/aws-lambda/: Dockerfile  README.md  handler.py  run.py
examples/generators/jupyter/: generators_alquimia.ipynb  generators_groq.ipynb  generators_heretic.ipynb
examples/helpers/: __init__.py  retriever.py
examples/humanity/jupyter/: humanity.ipynb
examples/regulatory/corpus/: call_policy.md  refund_policy.md
examples/regulatory/data/: dataset.json
examples/regulatory/jupyter/: regulatory.ipynb
examples/role_adherence/aws-lambda/: Dockerfile  README.md  handler.py  requirements.txt  run.py
examples/role_adherence/jupyter/: dataset_role_adherence.json  role_adherence.ipynb
examples/runners/aws-lambda/: Dockerfile  README.md  handler.py  run.py
examples/runners/jupyter/: runners.ipynb
examples/toxicity/jupyter/: toxicity.ipynb
examples/vision/jupyter/: vision.ipynb
specs/001-evalhub-provider-adapter/: plan.md  spec.md  tasks.md
specs/001-fix-mypy-and-guardian/: plan.md
src/gaussia/: __init__.py
src/gaussia/connectors/: local.py
src/gaussia/core/: __init__.py  base.py  contradiction_checker.py  document_retriever.py  exceptions.py  extractor.py  guardian.py  loader.py  reranker.py  retriever.py  sentiment.py
src/gaussia/embedders/: qwen.py  sentence_transformer.py
src/gaussia/explainability/: __init__.py  attributions.py
src/gaussia/extractors/: embedding.py
src/gaussia/generators/: __init__.py
src/gaussia/guardians/: __init__.py
src/gaussia/integrations/: __init__.py
src/gaussia/llm/: __init__.py  judge.py  prompts.py  schemas.py
src/gaussia/loaders/: hurtlex.py
src/gaussia/metrics/: __init__.py  agentic.py  best_of.py  bias.py  context.py  conversational.py  humanity.py  regulatory.py  role_adherence.py  toxicity.py  vision.py
src/gaussia/prompt_optimizer/: __init__.py  base.py  evaluators.py  protocols.py  schemas.py
src/gaussia/rerankers/: __init__.py  qwen.py
src/gaussia/schemas/: __init__.py  agentic.py  best_of.py  bias.py  common.py  context.py  conversational.py  explainability.py  generators.py  humanity.py  metrics.py  regulatory.py  role_adherence.py  runner.py  toxicity.py  vision.py
src/gaussia/scorers/: cosine.py
src/gaussia/statistical/: base.py  bayesian.py  frequentist.py
src/gaussia/utils/: __init__.py  logging.py  math.py
src/pygaussia/: __init__.py
src/pygaussia/connectors/: __init__.py  base.py
src/pygaussia/core/: __init__.py  base.py  contradiction_checker.py  document_retriever.py  embedder.py  extractor.py  guardian.py  loader.py  retriever.py  sentiment.py  similarity_scorer.py
src/pygaussia/embedders/: __init__.py  qwen.py  sentence_transformer.py
src/pygaussia/explainability/: __init__.py  attributions.py
src/pygaussia/extractors/: __init__.py  embedding.py
src/pygaussia/generators/: __init__.py
src/pygaussia/guardians/: __init__.py
src/pygaussia/llm/: __init__.py  judge.py
src/pygaussia/loaders/: __init__.py  hurtlex.py
src/pygaussia/metrics/: __init__.py  agentic.py  best_of.py  bias.py  context.py  conversational.py  humanity.py  regulatory.py  toxicity.py  vision.py
src/pygaussia/prompt_optimizer/: __init__.py  base.py  schemas.py
src/pygaussia/rerankers/: qwen.py
src/pygaussia/schemas/: __init__.py  bias.py  common.py  explainability.py  generators.py  vision.py
src/pygaussia/scorers/: __init__.py  cosine.py
src/pygaussia/statistical/: __init__.py
tests/: __init__.py  conftest.py
tests/core/: test_base.py
tests/embedders/: test_qwen_embedder.py
tests/explainability/: __init__.py  test_attributions.py
tests/extractors/: test_embedding.py
tests/fixtures/: __init__.py  mock_data.py  mock_retriever.py
tests/generators/: __init__.py  conftest.py  test_base_generator.py  test_local_markdown_loader.py  test_strategies.py
tests/guardians/: test_ibm_granite.py  test_llama_guard.py  test_openai_guardian_provider.py
tests/integrations/evalhub/: __init__.py  test_adapter.py  test_benchmarks.py  test_mlflow_runs.py  test_payloads.py  test_run_logging.py
tests/llm/: test_judge.py  test_schemas.py
tests/metrics/: __init__.py  test_agentic.py  test_best_of.py  test_bias.py  test_context.py  test_conversational.py  test_guardian_overrides.py  test_huggingface_provider.py  test_humanity.py  test_regulatory.py  test_role_adherence.py  test_toxicity.py  test_vision.py
tests/prompt_optimizer/: conftest.py  test_evaluators.py  test_gepa.py  test_mipro.py
tests/rerankers/: test_qwen_reranker.py
tests/statistical/: __init__.py  test_bayesian.py  test_frequentist.py
(+44 files in other folders)
